@@ -196,6 +196,15 @@ def define_widgets(self, gladefile):
         'epdf_reader': get('pdf_reader_entry'),
         'font': get('p_font'),
         'font_size': get('p_font_size'),
+        'pdf_elements_table': get('pdf_elements_table'),
+        'pdf_image': get('pdf_image'),
+        'pdf_director': get('pdf_director'),
+        'pdf_genre': get('pdf_genre'),
+        'pdf_cast': get('pdf_cast'),
+        'pdf_plot': get('pdf_plot'),
+        'pdf_year': get('pdf_year'),
+        'pdf_runtime': get('pdf_runtime'),
+        'pdf_notes': get('pdf_notes'),
         'layers': get('p_layers'),
         'media': get('p_media'),
         'region': get('p_region'),
