@@ -5,6 +5,11 @@ Griffith ChangeLog
 (c) 2005-2010  Vasco Nunes, Piotr Ożarowski
 
 
+2010-05-06  Michael Jahn
+	* [#324171] PDF Font Size
+	* support for covers, year, runtime, notes and plot for PDF export
+	  elements for export can be deselected
+
 2010-04-28  Piotr Ożarowski
 	* Use 255 as maximum string length for few fields (MySQL apparently
 	  doesn't like >=256 on some configurations)
